ckanext/saeoss/assets/css/saeoss.css
/* ... */
#browserAlert {
  background-color: #00000000;
}

#browserAlert .modal-header {
  display: flex;
}

#browserAlert .modal-header .modal-title {
  flex-grow: 1;
}

#browserAlert .modal-footer {
  display: flex;
}

#browserAlert label:after {
  content: "" !important;
}

/* Web Mapping */

#map{
  top: 0;
  button:0;
  margin: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: absolute;
}

